Integration de l'API airtable
Tansformation en API Express
Integration de l'API airtable
Logique de recherche de toutes les valeurs d'une table et d'une donnée unique

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/WebDevLyon/AirtableToHtml#readme",
   "dependencies": {
     "airtable": "^0.10.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
   }
 }
