--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Récupération des données d'une table Airtable pour conversion en HTML/CSS",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,9 @@
   "homepage": "https://github.com/WebDevLyon/AirtableToHtml#readme",
   "dependencies": {
     "airtable": "^0.10.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
